# RemoteBot

./: .travis.yml  CMakeLists.txt  README.md
docs/: Protocol.txt  RemoteBot.xml
include/: EventEmitter.hpp  config.h
src/: BotHandler.cpp  BotHandler.h  BotService.cpp  BotService.h  ClientHandler.cpp  ClientHandler.h  ServiceProviderHandler.cpp  ServiceProviderHandler.h  client.cpp  main.cpp  server.cpp
src/Containers/: ThreadSafeQueue.h
src/Net/: TCPConnection.cpp  TCPConnection.h  TCPServer.cpp  TCPServer.h
test/: EventEmitterTest.cpp
